--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 <!-- 
+Specifications:
 - Users should be able to see hover and focus status for all interactive elements
 - Font sizes for mobile devices are slightly smaller
 -->
@@ -16,13 +17,13 @@
 </head>
 <body>
   <div id="frame">
-    <img id="graphic" src="tbc" />
+    <img id="graphic" src="assets/images/illustration-article.svg" />
     <p id="category">Learning</p>
     <p id="published">Published 21 Dec 2023</p>
     <h1>HTML & CSS foundations</h1>
     <p id="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
     <div id="author">
-      <img id="author-img" src="tbc" />
+      <img id="author-img" src="assets/images/image-avatar.webp" >
       <p id="author-name">Greg Hooper</p>
     </div>
   </div>
@@ -30,7 +31,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Alexander Roan</a>.
   </div>
 </body>
 </html>
