--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@ Specifications:
 </head>
 <body>
   <div id="frame">
-    <img id="graphic" src="assets/images/illustration-article.svg" />
+    <img 
+      id="graphic" 
+      alt="an abstract illustration as decoration"
+      src="assets/images/illustration-article.svg" />
     <p id="category">Learning</p>
     <p id="published">Published 21 Dec 2023</p>
     <h1>HTML & CSS foundations</h1>
     <p id="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
     <div id="author">
-      <img id="author-img" src="assets/images/image-avatar.webp" >
+      <img 
+        id="author-img" 
+        alt="a small image of the authors face"
+        src="assets/images/image-avatar.webp" >
       <p id="author-name">Greg Hooper</p>
     </div>
   </div>
